--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 autopep8==2.0.2
 Django==4.2
+django-cors-headers==3.14.0
 djangorestframework==3.14.0
 pycodestyle==2.10.0
 pytz==2023.3
