--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,17 @@
-FROM python:3.9-alpine
+FROM python:3.11.3-alpine
+
+# set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+
+# install dependencies
 WORKDIR /backend
+
+# install dependencies
+RUN pip install --upgrade pip
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
+
+# copy project
 COPY . .
 
